--- a/app/views/parts/audienceedit.scala.html
+++ b/app/views/parts/audienceedit.scala.html
@@ -101,9 +101,9 @@
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="trackingcode" class="col-sm-3 control-label" readonly>Tracking Code</label>
+							<label for="trackingcode" class="col-sm-3 control-label">Tracking Code</label>
 							<div class="col-sm-9">
-								<textarea class="form-control" rows="3" id="trackingcode">Tracking Code here...</textarea>
+								<textarea class="form-control" rows="3" id="trackingcode" readonly>Tracking Code here...</textarea>
 							</div>
 						</div>
 						<div class="form-group">
