add path target

--- a/app/views/dashboardaudience.scala.html
+++ b/app/views/dashboardaudience.scala.html
@@ -51,7 +51,7 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 					</form>
 				</div>
 				<div class="col-sm-8">
-					<div class="well well-sm m-null input-daterange">
+					<div data-bind="datepicker: " class="well well-sm m-null input-daterange">
 						<div class="row">
 							<div class="col-sm-6">
 								<form class="form-horizontal" role="form">
