Added Demo Table with status

--- a/app/views/dashboardaudience.scala.html
+++ b/app/views/dashboardaudience.scala.html
@@ -115,7 +115,7 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 					</div>
 				</div>
 				<div class="row">
-				    @elements.pagination("datatablescroller")
+					@elements.pagination("datatablescroller")
 				</div>
 				<div class="row">
 					<div class="col-md-12">
@@ -138,8 +138,80 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 					</div>
 				</div>
 				<div class="row">
-				    @elements.pagination("datatablescroller")
+					@elements.pagination("datatablescroller")
 				</div>
+
+				<!-- DENO FOR PETER -->
+				<div class="row">
+					<div class="col-md-12">
+						<div class="table-responsive">
+							<table class="table table-striped table-bordered m-null data-table">
+								<thead>
+									<tr>
+										<th class="sorting">Name</th>
+										<th class="sorting">Status</th>
+										<th class="sorting">Revenue</th>
+										<th class="sorting">Cost</th>
+										<th class="sorting">Start</th>
+										<th class="sorting">End</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr class="odd">
+										<td class=" sorting_1">Name 103</td>
+										<td class=""><span class="label label-default"><span class="glyphicon glyphicon-pause"></span> Paused</span></td>
+										<td class="">$56.91</td>
+										<td class="">$9.27</td>
+										<td class="">11/16/2013</td>
+										<td class="">11/24/2013</td>
+									</tr>
+									<tr class="even">
+										<td class=" sorting_1">Name 103</td>
+										<td class=""><span class="label label-primary"><span class="glyphicon glyphicon-flag"></span> Finished</span></td>
+										<td class="">$56.91</td>
+										<td class="">$9.27</td>
+										<td class="">11/16/2013</td>
+										<td class="">11/24/2013</td>
+									</tr>
+									<tr class="odd">
+										<td class=" sorting_1">Name 103</td>
+										<td class=""><span class="label label-success"><span class="glyphicon glyphicon-play"></span> Active</span></td>
+										<td class="">$56.91</td>
+										<td class="">$9.27</td>
+										<td class="">11/16/2013</td>
+										<td class="">11/24/2013</td>
+									</tr>
+									<tr class="even">
+										<td class=" sorting_1">Name 103</td>
+										<td class=""><span class="label label-info"><span class="glyphicon glyphicon-time"></span> Pending</span></td>
+										<td class="">$56.91</td>
+										<td class="">$9.27</td>
+										<td class="">11/16/2013</td>
+										<td class="">11/24/2013</td>
+									</tr>
+									<tr class="odd">
+										<td class=" sorting_1">Name 103</td>
+										<td class=""><span class="label label-warning"><span class="glyphicon glyphicon-ban-circle"></span> Cancelled</span></td>
+										<td class="">$56.91</td>
+										<td class="">$9.27</td>
+										<td class="">11/16/2013</td>
+										<td class="">11/24/2013</td>
+									</tr>
+									<tr class="even">
+										<td class=" sorting_1">Name 103</td>
+										<td class=""><span class="label label-danger"><span class="glyphicon glyphicon-warning-sign"></span> Rejected</span></td>
+										<td class="">$56.91</td>
+										<td class="">$9.27</td>
+										<td class="">11/16/2013</td>
+										<td class="">11/24/2013</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+				</div>
+				<!-- DENO FOR PETER -->
+
 			</div>
 			<div class="col-md-3">
 				<p>
