Error/Warning/Success Validation Example added

--- a/app/views/parts/audienceedit.scala.html
+++ b/app/views/parts/audienceedit.scala.html
@@ -54,7 +54,7 @@
 				<div class="box-1">
 					<h3>New Website</h3>
 					<form class="form-horizontal" role="form">
-						<div class="form-group">
+						<div class="form-group has-warning">
 							<label for="websitename" class="col-sm-3 control-label">Website Name</label>
 							<div class="col-sm-9">
 								<input type="text" class="form-control" id="websitename" placeholder="Website Name">
@@ -68,10 +68,10 @@
 						</div>
 						<div class="form-group">
 							<div class="col-sm-offset-3 col-sm-9">
-								<div class="alert alert-info m-null-btm">Explanation about Tracking code here...</div>
+								<div class="alert alert-info m-null-btm"><span class="glyphicon glyphicon-info-sign"></span> Explanation about Tracking code here...</div>
 							</div>
 						</div>
-						<div class="form-group">
+						<div class="form-group has-success">
 							<label for="email" class="col-sm-3 control-label">Send Tracking Code via Email</label>
 							<div class="col-sm-9">
 								<div class="input-group">
@@ -108,10 +108,10 @@
 						</div>
 						<div class="form-group">
 							<div class="col-sm-offset-3 col-sm-9">
-								<div class="alert alert-info m-null-btm">Explanation about Tracking code here...</div>
+								<div class="alert alert-info m-null-btm"><span class="glyphicon glyphicon-info-sign"></span> Explanation about Tracking code here...</div>
 							</div>
 						</div>
-						<div class="form-group">
+						<div class="form-group has-error">
 							<label for="email" class="col-sm-3 control-label">Send Tracking Code via Email</label>
 							<div class="col-sm-9">
 								<div class="input-group">
