--- a/app/views/parts/audienceedit.scala.html
+++ b/app/views/parts/audienceedit.scala.html
@@ -9,6 +9,139 @@
 			<div class="modal-body">
 				<h3 class="m-null-top">Select Website</h3>
 				<div class="box-strips">
+					<div class="clearfix">
+						<div class="website-block-wrapper">
+							<div class="website-block-add-wrapper">
+								<a href="#" class="website-block-add">
+									<span class="website-name">Add New Website</span>
+									<span class="thumbnail-site">
+										<img alt="" src="@routes.Assets.at("images/thumbnail-add.gif")" />
+									</span>
+								</a>
+							</div>
+							<div class="carousel-wrapper">
+								<div class="carousel">
+									<ul>
+										<li>
+											<a href="#" class="website-block">
+												<span class="website-name">Google.com</span>
+												<span class="thumbnail-site">
+													<!--<input type="checkbox" id="name1">-->
+													<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+												</span>
+												<span class="website-audience">20.000 Users <span class="glyphicon glyphicon-eye-open"></span></span>
+												<span class="website-actions"><button type="button" class="btn btn-primary btn-xs">Select</button> <button type="button" class="btn btn-primary btn-xs">Edit</button> <button type="button" class="btn btn-danger btn-xs">Delete</button></span>
+											</a>
+										</li>
+										<li>
+											<a href="#" class="website-block selected">
+												<!--<span class="label label-success">Selected</span>-->
+												<span class="website-name">Google.com selected</span>
+												<span class="thumbnail-site">
+													<!--<input type="checkbox" id="name2">-->
+													<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+												</span>
+												<span class="website-audience">20.000 Users <span class="glyphicon glyphicon-eye-open"></span></span>
+												<span class="website-actions"><button type="button" class="btn btn-primary btn-xs">Unselect</button> <button type="button" class="btn btn-primary btn-xs">Edit</button> <button type="button" class="btn btn-danger btn-xs">Delete</button></span>
+											</a>
+										</li>
+										<li>
+											<a href="#" class="website-block selected active">
+												<span class="website-name">Google.com active</span>
+												<span class="thumbnail-site">
+													<!--<input type="checkbox" id="name3">-->
+													<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+												</span>
+												<span class="website-audience">20.000 Users <span class="glyphicon glyphicon-eye-open"></span></span>
+												<span class="website-actions"><button type="button" class="btn btn-primary btn-xs">Unselect</button> <button type="button" class="btn btn-primary btn-xs">Edit</button> <button type="button" class="btn btn-danger btn-xs">Delete</button></span>
+											</a>
+										</li>
+										<li>
+											<a href="#" class="website-block">
+												<span class="website-name">Google.com</span>
+												<span class="thumbnail-site">
+													<!--<input type="checkbox" id="name4">-->
+													<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+												</span>
+												<span class="website-audience">20.000 Users <span class="glyphicon glyphicon-eye-open"></span></span>
+												<span class="website-actions"><button type="button" class="btn btn-primary btn-xs">Select</button> <button type="button" class="btn btn-primary btn-xs">Edit</button> <button type="button" class="btn btn-danger btn-xs">Delete</button></span>
+											</a>
+										</li>
+										<li>
+											<a href="#" class="website-block">
+												<span class="website-name">Google.com</span>
+												<span class="thumbnail-site">
+													<!--<input type="checkbox" id="name5">-->
+													<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+												</span>
+												<span class="website-audience">20.000 Users <span class="glyphicon glyphicon-eye-open"></span></span>
+												<span class="website-actions"><button type="button" class="btn btn-primary btn-xs">Select</button> <button type="button" class="btn btn-primary btn-xs">Edit</button> <button type="button" class="btn btn-danger btn-xs">Delete</button></span>
+											</a>
+										</li>
+										<li>
+											<a href="#" class="website-block">
+												<span class="website-name">Google.com</span>
+												<span class="thumbnail-site">
+													<!--<input type="checkbox" id="name6">-->
+													<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+												</span>
+												<span class="website-audience">20.000 Users <span class="glyphicon glyphicon-eye-open"></span></span>
+												<span class="website-actions"><button type="button" class="btn btn-primary btn-xs">Select</button> <button type="button" class="btn btn-primary btn-xs">Edit</button> <button type="button" class="btn btn-danger btn-xs">Delete</button></span>
+											</a>
+										</li>
+									</ul>
+								</div>
+								<a href="#" class="carousel-control-prev">&lsaquo;</a>
+								<a href="#" class="carousel-control-next">&rsaquo;</a>
+							</div>
+						</div>
+					</div>
+
+					<!--
+					<ul class="list-unstyled">
+						<li>
+							<a href="#" class="website-block">
+								<span class="website-name">Google.com</span>
+								<span class="thumbnail-site">
+									<input type="checkbox" id="name1">
+									<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+								</span>
+								<span class="website-audience">20.000 Users <span class="glyphicon glyphicon-eye-open"></span></span>
+								<span class="website-actions"><button type="button" class="btn btn-primary btn-xs">Select</button> <button type="button" class="btn btn-primary btn-xs">Edit</button> <button type="button" class="btn btn-danger btn-xs">Delete</button></span>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="website-block selected">
+								<span class="website-name">Google.com selected</span>
+								<span class="thumbnail-site">
+									<input type="checkbox" id="name2">
+									<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+								</span>
+								<span class="website-audience">20.000 Users <span class="glyphicon glyphicon-eye-open"></span></span>
+								<span class="website-actions"><button type="button" class="btn btn-primary btn-xs">Edit</button> <button type="button" class="btn btn-danger btn-xs">Delete</button></span>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="website-block active">
+								<span class="website-name">Google.com active</span>
+								<span class="thumbnail-site">
+									<input type="checkbox" id="name3">
+									<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+								</span>
+								<span class="website-audience">20.000 Users <span class="glyphicon glyphicon-eye-open"></span></span>
+								<span class="website-actions"><button type="button" class="btn btn-primary btn-xs">Edit</button> <button type="button" class="btn btn-danger btn-xs">Delete</button></span>
+							</a>
+						</li>
+						<li>
+							<a href="#" class="website-block-add">
+								<span class="website-name">Add New Website</span>
+								<span class="thumbnail-site">
+									<img alt="" src="@routes.Assets.at("images/thumbnail-add.gif")" />
+								</span>
+							</a>
+						</li>
+					</ul>
+
 					<div class="row">
 						<div class="col-sm-3 text-center">
 							<a href="#" class="website-block">
@@ -49,6 +182,7 @@
 							</a>
 						</div>
 					</div>
+					-->
 				</div>
 
 				<div class="box-1">
