--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -89,7 +89,7 @@ h3 {
 .m-btm {margin-bottom:20px;}
 .m-top-btm {margin:20px 0;}
 .p-null {padding:0}
-.pagination-fix {margin:20px 0;padding:5px 0;}
+.pagination-fix {margin:0 0 20px;padding:5px 0;}
 .well-fix {margin-top:10px;}
 
 //panel heading umstyling
