--- a/app/views/admins.scala.html
+++ b/app/views/admins.scala.html
@@ -10,7 +10,7 @@
 	//]]>
 </script>
 } {
-<div class="container">
+<div class="container m-top">
 	<div class="row">
 		<div class="col-md-9">
 			<div class="row">
@@ -19,7 +19,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="table-responsive">
-						<table class="table table-striped table-bordered m-null data-table">
+						<table class="table table-striped table-bordered data-table">
 							<thead>
 								<tr>
 									<th class="sorting">Name</th>
@@ -39,7 +39,7 @@
 			</div>
 		</div>
 		<div class="col-md-3">
-			<p class="m-top">
+			<p>
 				<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-toggle="modal" data-target="#editAudience"><div></div><span class="glyphicon glyphicon-plus-sign"></span> New Admin</button>
 			</p>
 		</div>
