--- a/app/views/elements/pagination.scala.html
+++ b/app/views/elements/pagination.scala.html
@@ -1,19 +1,14 @@
 @(model: String)
-<div class="col-xs-6">
+<div class="col-xs-6" data-bind="if: @{model}.hasData">
 	<p class="pagination-fix">
-		<!-- ko if: @{model}.hasData -->
 		<strong class="pagination-text">Displaying: <span
 			data-bind="text: @{model}.fromIndex"></span> - <span
 			data-bind="text: @{model}.toIndex"></span> of <span
 			data-bind="text: @{model}.maxIndex"></span></strong>
-		<!-- /ko -->
-		<!-- ko ifnot: @{model}.hasData -->
-		<strong class="pagination-text">No Data</strong>
-		<!-- /ko -->
 	</p>
 </div>
-<div class="col-xs-6">
-	<ul class="pagination pagination-sm pull-right">
+<div class="col-xs-6" data-bind="if: @{model}.hasData">
+	<ul class="pagination pagination-sm pull-right m-null-top">
 		<li><a href="javascript:void(0)"
 			data-bind="click: @{model}.previous">&laquo;</a></li>
 		<!-- ko foreach: @{model}.visiblePages -->
