--- a/app/views/parts/audienceedit.scala.html
+++ b/app/views/parts/audienceedit.scala.html
@@ -28,6 +28,7 @@
 												<span class="thumbnail-site">
 													<!--<input type="checkbox" id="name1">-->
 													<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+													<span></span>
 												</span>
 												<span class="website-audience">20.000 Users <span class="glyphicon glyphicon-eye-open"></span></span>
 												<span class="website-actions"><button type="button" class="btn btn-primary btn-xs">Select</button> <button type="button" class="btn btn-primary btn-xs">Edit</button> <button type="button" class="btn btn-danger btn-xs">Delete</button></span>
@@ -40,6 +41,7 @@
 												<span class="thumbnail-site">
 													<!--<input type="checkbox" id="name2">-->
 													<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+													<span></span>
 												</span>
 												<span class="website-audience">20.000 Users <span class="glyphicon glyphicon-eye-open"></span></span>
 												<span class="website-actions"><button type="button" class="btn btn-primary btn-xs">Unselect</button> <button type="button" class="btn btn-primary btn-xs">Edit</button> <button type="button" class="btn btn-danger btn-xs">Delete</button></span>
@@ -47,10 +49,11 @@
 										</li>
 										<li>
 											<a href="#" class="website-block selected active">
-												<span class="website-name">Google.com active</span>
+												<span class="website-name">Google.com selected active</span>
 												<span class="thumbnail-site">
 													<!--<input type="checkbox" id="name3">-->
 													<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+													<span></span>
 												</span>
 												<span class="website-audience">20.000 Users <span class="glyphicon glyphicon-eye-open"></span></span>
 												<span class="website-actions"><button type="button" class="btn btn-primary btn-xs">Unselect</button> <button type="button" class="btn btn-primary btn-xs">Edit</button> <button type="button" class="btn btn-danger btn-xs">Delete</button></span>
@@ -62,6 +65,7 @@
 												<span class="thumbnail-site">
 													<!--<input type="checkbox" id="name4">-->
 													<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+													<span></span>
 												</span>
 												<span class="website-audience">20.000 Users <span class="glyphicon glyphicon-eye-open"></span></span>
 												<span class="website-actions"><button type="button" class="btn btn-primary btn-xs">Select</button> <button type="button" class="btn btn-primary btn-xs">Edit</button> <button type="button" class="btn btn-danger btn-xs">Delete</button></span>
@@ -73,6 +77,7 @@
 												<span class="thumbnail-site">
 													<!--<input type="checkbox" id="name5">-->
 													<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+													<span></span>
 												</span>
 												<span class="website-audience">20.000 Users <span class="glyphicon glyphicon-eye-open"></span></span>
 												<span class="website-actions"><button type="button" class="btn btn-primary btn-xs">Select</button> <button type="button" class="btn btn-primary btn-xs">Edit</button> <button type="button" class="btn btn-danger btn-xs">Delete</button></span>
@@ -84,6 +89,7 @@
 												<span class="thumbnail-site">
 													<!--<input type="checkbox" id="name6">-->
 													<img alt="" src="@routes.Assets.at("images/thumbnail-site.gif")" />
+													<span></span>
 												</span>
 												<span class="website-audience">20.000 Users <span class="glyphicon glyphicon-eye-open"></span></span>
 												<span class="website-actions"><button type="button" class="btn btn-primary btn-xs">Select</button> <button type="button" class="btn btn-primary btn-xs">Edit</button> <button type="button" class="btn btn-danger btn-xs">Delete</button></span>
