--- a/app/views/parts/audienceedit.scala.html
+++ b/app/views/parts/audienceedit.scala.html
@@ -19,8 +19,8 @@
 									</span>
 								</a>
 							</div>
-							<div class="carousel-wrapper">
-								<div class="carousel">
+							<div class="jcarousel-wrapper with-add-block">
+								<div class="jcarousel">
 									<ul>
 										<li>
 											<a href="#" class="website-block">
@@ -97,8 +97,8 @@
 										</li>
 									</ul>
 								</div>
-								<a href="#" class="carousel-control-prev">&lsaquo;</a>
-								<a href="#" class="carousel-control-next">&rsaquo;</a>
+								<a href="#" class="jcarousel-control-prev">&lsaquo;</a>
+								<a href="#" class="jcarousel-control-next">&rsaquo;</a>
 							</div>
 						</div>
 					</div>
