--- a/app/views/dashboardcampaign.scala.html
+++ b/app/views/dashboardcampaign.scala.html
@@ -143,7 +143,7 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 			</div>
 			<div class="col-md-3">
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Campaign</button>
+					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: newcampaign" data-toggle="modal" data-target="#editCampaign"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Campaign</button>
 				</p>
 				<p>
 					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><span></span><span class="glyphicon glyphicon-plus-sign"></span> Yield Maximiser</button>
@@ -155,4 +155,5 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 		</div>
 	</div>
 </div>
+@parts.campaignedit(publishers)
 }
