--- a/app/views/dashboardaudience.scala.html
+++ b/app/views/dashboardaudience.scala.html
@@ -24,17 +24,17 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 			<div class="row legends">
 				<div class="col-sm-4">
 					<div class="legend-revenu">
-						<span></span> $<span data-bind="text: chartdata.sumrevenue"></span> Revenue
+						<span></span> $<span data-bind="text: audiencechart.sumrevenue"></span> Revenue
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="legend-ad-spent">
-						<span></span> $<span data-bind="text: chartdata.sumadspend"></span> Ad spend
+						<span></span> $<span data-bind="text: audiencechart.sumadspend"></span> Ad spend
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="legend-profit">
-						<span></span> $<span data-bind="text: chartdata.sumprofit"></span> Profit
+						<span></span> $<span data-bind="text: audiencechart.sumprofit"></span> Profit
 					</div>
 				</div>
 			</div>
@@ -44,21 +44,21 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 						<div class="form-group well-fix">
 							<label for="selectDate" class="col-sm-2 control-label">Dates</label>
 							<div class="col-sm-10">
-								<select class="form-control" data-bind="options: chartdaterange.availableDateRanges, value: chartdaterange.dateRange" id="selectDate">
+								<select class="form-control" data-bind="options: audiencechartdaterange.availableDateRanges, value: audiencechartdaterange.dateRange" id="selectDate">
 								</select>
 							</div>
 						</div>
 					</form>
 				</div>
 				<div class="col-sm-8">
-					<div data-bind="datepicker: " class="well well-sm m-null input-daterange">
+					<div data-bind="datepicker: audiencechartdaterange, datepickerOptions: { calendarWeeks: true, autoclose: true, todayHighlight: true }" class="well well-sm m-null input-daterange">
 						<div class="row">
 							<div class="col-sm-6">
 								<form class="form-horizontal" role="form">
 									<div class="form-group m-null">
 										<label for="selectDateFrom" class="col-sm-2 control-label">From</label>
 										<div class="col-sm-10">
-											<input class="form-control date-picker" data-bind="value: chartdaterange.formattedStartDate" id="selectDateFrom" name="start"/>
+											<input class="form-control date-picker" id="selectDateFrom" name="start"/>
 										</div>
 									</div>
 								</form>
@@ -68,7 +68,7 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 									<div class="form-group m-null">
 										<label for="selectDateTo" class="col-sm-2 control-label">To</label>
 										<div class="col-sm-10">
-											<input class="form-control date-picker" data-bind="value: chartdaterange.formattedEndDate" id="selectDateTo" name="end"/>
+											<input class="form-control date-picker" id="selectDateTo" name="end"/>
 										</div>
 									</div>
 								</form>
@@ -100,27 +100,27 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 			<div class="col-md-9">
 				<div class="row">
 					<div class="col-xs-6">
-						<select class="form-control m-btm" data-bind="options: datatablesearchbar.availableCategories, value: datatablesearchbar.category">
+						<select class="form-control m-btm" data-bind="options: audiencetablesearchbar.availableCategories, value: audiencetablesearchbar.category">
 						</select>
 					</div>
 					<div class="col-xs-6">
 						<form role="search">
 							<div class="input-group m-btm">
-								<input type="text" data-bind="value: datatablesearchbar.query" placeholder="Search ..." class="form-control">
+								<input type="text" data-bind="value: audiencetablesearchbar.query" placeholder="Search ..." class="form-control">
 								<span class="input-group-btn">
-									<button class="btn btn-primary" data-bind="click: datatablesearchbar.search" type="button">Search</button>
+									<button class="btn btn-primary" data-bind="click: audiencetablesearchbar.search" type="button">Search</button>
 								</span>
 							</div>
 						</form>
 					</div>
 				</div>
 				<div class="row">
-					@elements.pagination("datatablescroller")
+					@elements.pagination("audiencetablescroller")
 				</div>
 				<div class="row">
 					<div class="col-md-12">
 						<div class="table-responsive">
-							<table class="table table-striped table-bordered data-table">
+							<table class="table table-striped table-bordered data-table" data-bind="datatable: audiencetable, datatableScroller: audiencetablescroller">
 								<thead>
 									<tr>
 										<th class="sorting">Name</th>
@@ -138,80 +138,8 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 					</div>
 				</div>
 				<div class="row">
-					@elements.pagination("datatablescroller")
+					@elements.pagination("audiencetablescroller")
 				</div>
-
-				<!-- DENO FOR PETER -->
-				<div class="row">
-					<div class="col-md-12">
-						<div class="table-responsive">
-							<table class="table table-striped table-bordered m-null data-table">
-								<thead>
-									<tr>
-										<th class="sorting">Name</th>
-										<th class="sorting">Status</th>
-										<th class="sorting">Revenue</th>
-										<th class="sorting">Cost</th>
-										<th class="sorting">Start</th>
-										<th class="sorting">End</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr class="odd">
-										<td class=" sorting_1">Name 103</td>
-										<td class=""><span class="label label-default"><span class="glyphicon glyphicon-pause"></span> Paused</span></td>
-										<td class="">$56.91</td>
-										<td class="">$9.27</td>
-										<td class="">11/16/2013</td>
-										<td class="">11/24/2013</td>
-									</tr>
-									<tr class="even">
-										<td class=" sorting_1">Name 103</td>
-										<td class=""><span class="label label-primary"><span class="glyphicon glyphicon-flag"></span> Finished</span></td>
-										<td class="">$56.91</td>
-										<td class="">$9.27</td>
-										<td class="">11/16/2013</td>
-										<td class="">11/24/2013</td>
-									</tr>
-									<tr class="odd">
-										<td class=" sorting_1">Name 103</td>
-										<td class=""><span class="label label-success"><span class="glyphicon glyphicon-play"></span> Active</span></td>
-										<td class="">$56.91</td>
-										<td class="">$9.27</td>
-										<td class="">11/16/2013</td>
-										<td class="">11/24/2013</td>
-									</tr>
-									<tr class="even">
-										<td class=" sorting_1">Name 103</td>
-										<td class=""><span class="label label-info"><span class="glyphicon glyphicon-time"></span> Pending</span></td>
-										<td class="">$56.91</td>
-										<td class="">$9.27</td>
-										<td class="">11/16/2013</td>
-										<td class="">11/24/2013</td>
-									</tr>
-									<tr class="odd">
-										<td class=" sorting_1">Name 103</td>
-										<td class=""><span class="label label-warning"><span class="glyphicon glyphicon-ban-circle"></span> Cancelled</span></td>
-										<td class="">$56.91</td>
-										<td class="">$9.27</td>
-										<td class="">11/16/2013</td>
-										<td class="">11/24/2013</td>
-									</tr>
-									<tr class="even">
-										<td class=" sorting_1">Name 103</td>
-										<td class=""><span class="label label-danger"><span class="glyphicon glyphicon-warning-sign"></span> Rejected</span></td>
-										<td class="">$56.91</td>
-										<td class="">$9.27</td>
-										<td class="">11/16/2013</td>
-										<td class="">11/24/2013</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-					</div>
-				</div>
-				<!-- DENO FOR PETER -->
-
 			</div>
 			<div class="col-md-3">
 				<p>
