--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -37,25 +37,25 @@
 		<li>
 			<a name="howitworks"></a>
 			<div class="row">
-				<div class="col-md-8 col-md-push-4">
+				<div class="col-sm-8 col-sm-push-4">
 					<h3>1. Get set up in less than 5 minutes...</h3>
 					<p>Place a small snippet of HTML on your website. Your website looks the same. No changes required or made to your content.</p>
 				</div>
-				<div class="col-md-4 col-md-pull-8"><img alt="" src="@routes.Assets.at("images/ipad.png")" class="img-responsive" /></div>
+				<div class="col-sm-4 col-sm-pull-8"><img alt="" src="@routes.Assets.at("images/how-it-works_01.png")" class="img-responsive" /></div>
 			</div>
 			<div class="row">
-				<div class="col-md-8">
+				<div class="col-sm-8">
 					<h3>2. Share the new opportunity with your Exhibitors</h3>
 					<p>With Audience Extender you have another arrow in your quiver to help your sponsors, exhibitors, and advertisers enhance their brand and grow their client base. Our custom built sales tools will help you easily sell access to your audience, with very little work.</p>
 				</div>
-				<div class="col-md-4"><img alt="" src="@routes.Assets.at("images/ipad.png")" class="img-responsive" /></div>
+				<div class="col-sm-4"><img alt="" src="@routes.Assets.at("images/how-it-works_02.png")" class="img-responsive" /></div>
 			</div>
 			<div class="row">
-				<div class="col-md-8 col-md-push-4">
+				<div class="col-sm-8 col-sm-push-4">
 					<h3>3. Earn money in your sleep</h3>
 					<p>"Fire and Forget": because Audience Extender enables you to make money off your audience wherever they are online, you earn money without having to worry about a thing.</p>
 				</div>
-				<div class="col-md-4 col-md-pull-8"><img alt="" src="@routes.Assets.at("images/ipad.png")" class="img-responsive" /></div>
+				<div class="col-sm-4 col-sm-pull-8"><img alt="" src="@routes.Assets.at("images/how-it-works_03.png")" class="img-responsive" /></div>
 			</div>
 		</li>
 
