new logo added (as image)

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -61,11 +61,12 @@ body {
 }
 
 .navbar-default .navbar-brand {
-	font-family:@font1;
-	font-size:23px;
-	font-style:italic;
-	font-weight:600;
-	color:@color-blue;
+	background:url("/assets/images/logo-ae.png") no-repeat center center;
+	height:46px;
+	width:150px;
+}
+.navbar-default .navbar-brand span {
+	display:none;
 }
 
 
