--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -23,7 +23,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="@routes.MainController.dashboard">Audience Extender</a>
+			<a class="navbar-brand" href="@routes.MainController.dashboard"><span>Audience Extender</span></a>
 		</div>
 		<div class="navbar-collapse collapse">
 			@header
