--- a/app/views/templates/public.scala.html
+++ b/app/views/templates/public.scala.html
@@ -21,7 +21,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="@homelink">Audience Extender</a>
+			<a class="navbar-brand" href="@homelink"><span>Audience Extender</span></a>
 		</div>
 		<div class="navbar-collapse collapse">
 			@header
