small fix für responsive

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -24,7 +24,7 @@
 <div class="head">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-lg-6 col-md-7 col-sm-10">
 				<h1>Monetize Your Online Audience Like Never Before ...</h1>
 				<p>AudienceExtender helps Event Owners and Managers unleash the hidden revenue potential of their website visitors. Built specifically for B2B media companies by seasoned B2B media experts and advertising technology professionals.</p>
 			</div>
@@ -36,21 +36,21 @@
 	<ul class="list-unstyled slides">
 		<li>
 			<a name="howitworks"></a>
-			<div class="row">
+			<div class="row m-btm">
 				<div class="col-sm-8 col-sm-push-4">
 					<h3>1. Get set up in less than 5 minutes...</h3>
 					<p>Place a small snippet of HTML on your website. Your website looks the same. No changes required or made to your content.</p>
 				</div>
 				<div class="col-sm-4 col-sm-pull-8"><img alt="" src="@routes.Assets.at("images/how-it-works_01.png")" class="img-responsive" /></div>
 			</div>
-			<div class="row">
+			<div class="row m-btm">
 				<div class="col-sm-8">
 					<h3>2. Share the new opportunity with your Exhibitors</h3>
 					<p>With Audience Extender you have another arrow in your quiver to help your sponsors, exhibitors, and advertisers enhance their brand and grow their client base. Our custom built sales tools will help you easily sell access to your audience, with very little work.</p>
 				</div>
 				<div class="col-sm-4"><img alt="" src="@routes.Assets.at("images/how-it-works_02.png")" class="img-responsive" /></div>
 			</div>
-			<div class="row">
+			<div class="row m-btm">
 				<div class="col-sm-8 col-sm-push-4">
 					<h3>3. Earn money in your sleep</h3>
 					<p>"Fire and Forget": because Audience Extender enables you to make money off your audience wherever they are online, you earn money without having to worry about a thing.</p>
