--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -125,24 +125,24 @@
 				<div class="form-group">
 					<label for="name" class="col-sm-2 control-label">Name</label>
 					<div class="col-sm-10">
-						<input type="password" class="form-control" id="name" placeholder="Name">
+						<input type="text" autofocus="" placeholder="Name" class="form-control" id="name" name="name" value="">
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="email" class="col-sm-2 control-label">Email</label>
 					<div class="col-sm-10">
-						<input type="email" class="form-control" id="email" placeholder="Email">
+						<input type="email" autofocus="" required="" placeholder="Email" class="form-control" id="email" name="email" value="">
 					</div>
 				</div>
 				<div class="form-group">
-					<label for="message" class="col-sm-2 control-label">Message</label>
+					<label for="msg" class="col-sm-2 control-label">Message</label>
 					<div class="col-sm-10">
-						<textarea class="form-control" id="message" placeholder="Message"></textarea>
+						<textarea placeholder="Message" required="" class="form-control" id="msg" name="msg"></textarea>
 					</div>
 				</div>
 				<div class="form-group">
 					<div class="col-sm-offset-2 col-sm-10">
-						<button type="submit" class="btn btn-primary">Go!</button>
+						<button type="submit" class="btn btn-primary" id="sendbutton">Send Message</button>
 					</div>
 				</div>
 }
